welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: not found: value setPosition
      setPosition(i,j)
      ^